log/build_2021-06-24_13-17-01/control_pkg/stderr.log
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r1_node.cpp: In constructor ‘Control_PID_R1_node::Control_PID_R1_node()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r1_node.cpp:141:70: error: ‘LmSw_subs’ is not a member of ‘Control_PID_R1_node’
  141 |          "/robot_1/limit_switch", 1, std::bind(&Control_PID_R1_node::LmSw_subs,this,_1));
      |                                                                      ^~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r1_node.cpp:144:72: error: ‘velM_subs’ is not a member of ‘Control_PID_R1_node’
  144 |          "/robot_1/sim_vel_motors", 1, std::bind(&Control_PID_R1_node::velM_subs,this,_1));
      |                                                                        ^~~~~~~~~
make[2]: *** [CMakeFiles/control_pid_r1_node.dir/build.make:63: CMakeFiles/control_pid_r1_node.dir/src/control_pid_r1_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:136: CMakeFiles/control_pid_r1_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
